# iu-ir

./: .gitignore  README.md  pyproject.toml
hw01/: [IR]_Crawling.ipynb
hw02/: [IR]_Quality.ipynb
hw03/: [IR]_Index.ipynb  yandex.key
hw04/: [IR]_Suggest.ipynb
week02/: [IR]_Lab02.Selenium.ipynb
week06/: [IR]_Lab06.ipynb
week07/: [IR]_Lab07.ipynb
